Update API schema
