# spec/openapi.yaml
@@ -287,25 +287,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/listUserCommunityResponse"
       operationId: list-user-communities
-    post:
-      summary: Join a community
-      tags:
-        - User
-      parameters:
-        - name: id
-          schema:
-            $ref: "#/components/schemas/long"
-          in: path
-          required: true
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/joinCommunityRequest"
-      responses:
-        '204':
-          description: NoContent
   '/user/{id}/communities/{community_id}':
     delete:
       summary: 'Leave a community'
@@ -362,6 +343,20 @@ paths:
               schema:
                 $ref: "#/components/schemas/userDetail"
       operationId: get-my-profile
+  '/user/me/communities':
+    post:
+      summary: Join a community
+      tags:
+        - User
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/joinCommunityRequest"
+      responses:
+        '204':
+          description: NoContent
   '/user/profile':
     post:
       tags:
@@ -729,9 +724,9 @@ components:
     joinCommunityRequest:
       type: object
       required:
-        - user_id
+        - community_id
       properties:
-        user_id:
+        community_id:
           $ref: "#/components/schemas/long"
   securitySchemes:
     token:
